--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,12 @@ image = { version = "0.25", features = ["png", "jpeg"] }
 # 설정 관리
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-confy = "0.6"
-
-# 디렉토리 관리
-dirs = "5.0"
 
 # 파일 시스템
 walkdir = "2.5"
+
+# 파일 다이얼로그
+rfd = "0.14"
 
 # 에러 처리
 anyhow = "1.0"
